# A2McgRayTracer

./: CMakeLists.txt  README.md  README.txt
include/entities/: Camera.h  Entity.h  LightingMaterials.h
include/entities/actors/: Actor.h  Sphere.h  Tri.h
include/entities/lights/: DirectionalLight.h  LightSource.h  PointLight.h
include/renderer/: RayTracer.h
include/utilities/: SceneGenerator.h
include/utilities/geometry/: Geometry.h
include/utilities/raycast/: Ray.h
src/: CMakeLists.txt  Main.cpp
src/entities/: CMakeLists.txt  Camera.cpp  Entity.cpp
src/entities/actors/: Actor.cpp  Sphere.cpp  Tri.cpp
src/entities/lights/: DirectionalLight.cpp  LightSource.cpp  PointLight.cpp
src/renderer/: CMakeLists.txt  RayTracer.cpp
src/utilities/: CMakeLists.txt  SceneGenerator.cpp
src/utilities/geometry/: Geometry.cpp
src/utilities/raycast/: Ray.cpp
